--- a/WheelChef(Chef)/app/src/main/res/values/strings.xml
+++ b/WheelChef(Chef)/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">WheelChef(Chef)</string>
 
 
-    <string name="home_fragment">Home</string>
+    <string name="home_fragment">My Menu</string>
     <string name="my_account_fragment">My Account</string>
-    <string name="current_order_fragment">Current Order</string>
+    <string name="current_order_fragment">Customer Order</string>
     <string name="payment_fragment">Payment</string>
     <string name="history_fragment">History</string>
     <string name="log_out">Log Out</string>
@@ -28,4 +28,7 @@
         <item>Uranus</item>
         <item>Neptune</item>
     </string-array>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
