the ui for toggle availability and some code refactoring

--- a/WheelChef(Chef)/app/src/main/res/values/strings.xml
+++ b/WheelChef(Chef)/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
     <string name="app_name">WheelChef - chef</string>
-
+    <string name="available">available</string>
+    <string name="busy">busy</string>
     <string name="home_fragment">My Menu</string>
     <string name="my_account_fragment">My Account</string>
     <string name="current_order_fragment">Customer Order</string>
     <string name="payment_fragment">Payment</string>
     <string name="history_fragment">History</string>
     <string name="log_out">Log Out</string>
+    <string name="title_activity_edit_account">Edit Account</string>
     <string name="title_activity_view_dish_detail">View Dish Detail</string>
     <string name="title_activity_order_progress">Order Progress</string>
     <string name="title_activity_view_order_detail">View Order Detail</string>
